--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/Core2"]
 	path = Assets/Core2
 	url = https://github.com/Silvestor83/Core.git
+[submodule "Assets/Core"]
+	path = Assets/Core
+	url = https://github.com/Silvestor83/Core.git
